--- a/wp-content/themes/aktiv2014/app/styles/main.scss
+++ b/wp-content/themes/aktiv2014/app/styles/main.scss
@@ -160,7 +160,7 @@ body {
         @extend .card;
 
         @media #{$medium-up} { max-width: 400px; }
-        
+
         .login-remember {
             display: inline-block;
             padding: 6px 0;
@@ -349,9 +349,9 @@ input[type=submit]{
     }
     .list-members {
         .list-members-title{
-            line-height: 1.15;
-            display: inline-block;
+            line-height: 1;
             margin-right: rem-calc(4);
+            margin-bottom: 0;
 
         }
         ul {
@@ -377,6 +377,9 @@ input[type=submit]{
     .list-num-members {
         font-size: rem-calc(14);
         color: #666;
+    }
+    #members-result {
+        margin-top: 8px;
     }
     .email-aliases,
     .email-mailman {
