--- a/wp-content/themes/aktiv2014/app/styles/main.scss
+++ b/wp-content/themes/aktiv2014/app/styles/main.scss
@@ -456,10 +456,7 @@ input[type=submit]{
             float: left;
         }
         input[type=submit] {
-            padding-left: 8px;
-            padding-right: 8px;
-            padding-top: 0;
-            padding-bottom: 0;
+            padding: 0 8px;
             margin: 0;
             text-align: center;
             line-height: rem-calc(37);
@@ -512,9 +509,10 @@ input[type=submit]{
         padding: rem-calc(16);
         padding-bottom: rem-calc(8);
         display: block;
+
         @media #{$large-up} {
             padding-bottom: 0;
-            padding-top: 8;
+            padding-top: 8px;
         }
     }
 
@@ -540,11 +538,11 @@ footer {
     padding-bottom: rem-calc(10);
     background-color: #fff;
     border: 1px solid #eee;
-    box-shadow: rgba(0,0,0,0.14902) 0px 1px 0px 0px, rgba(0,0,0,0.09804) 0px 1px 2px 0px;
+    box-shadow: rgba(0,0,0,0.14902) 0 1px 0 0, rgba(0,0,0,0.09804) 0 1px 2px 0;
     border-radius: 2px;
 }
 .card-z1 {
-    box-shadow: rgba(0,0,0,0.14902) 0px 1px 0px 0px, rgba(0,0,0,0.09804) 0px 1px 2px 0px;
+    box-shadow: rgba(0,0,0,0.14902) 0 1px 0 0, rgba(0,0,0,0.09804) 0 1px 2px 0;
 }
 .card-z2 {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
@@ -559,13 +557,13 @@ footer {
 }
 @keyframes fadein {
     from { opacity: 0; top: -10px; }
-    to { opacity: 1; top: 0px; }
+    to { opacity: 1; top: 0; }
 }
 .dismiss {
     position: absolute;
     display: block;
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     font-size: rem-calc(30);
     color: #ccc;
     padding: 7px;
